--- a/css/style.css
+++ b/css/style.css
@@ -750,7 +750,7 @@ ul {
 
 
     .section-subtitle {
-    padding:15px 10px 10px 10px;
+    padding:15px 10px 40px 10px;
     color: #3a4ed5;
     font-weight: 400;
     font-size: 24px;
@@ -788,6 +788,8 @@ ul {
     left: 0;
     bottom: 0;
     right: 0;
+    width: 100%;
+    height: 100%;
     transition: .6s all ease;
 } 
 
@@ -835,4 +837,20 @@ ul {
 .overline-icon button {
     margin-top: 20px;
     display: none;
+}
+
+
+/* example */
+
+.example {
+    box-shadow: 2px 0 12px 0 rgb(75 78 109 / 33%);
+}
+
+.example .section-services_card {
+   border: 20px solid white;
+    margin: 0 auto;
+}
+
+.example h4 {
+    text-align: center;
 }
