--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ ul {
 .page-header_contact-link {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight: 300;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.6;
   padding-left: 10px;
 }
@@ -218,6 +218,7 @@ ul {
   letter-spacing: 1.8px;
   text-transform: uppercase;
   padding-bottom: 20px;
+  color: #333333;
 }
 
 .navbar_center_menu-link::after {
@@ -646,8 +647,8 @@ ul {
 
 /* Slider block */
 
-.slider-one {
-  background-image: url(../images/slider1.jpg);
+.main-slider_item {
+  position: relative;
   width: 100%;
   background-repeat: no-repeat;
   background-position: center center;
@@ -656,50 +657,40 @@ ul {
   opacity: 1;
   transform: translate3d(0px, 0px, 0px);
   transition-duration: 0ms;
-}
+} 
 
-.slider-two {
-  background-image: url(../images/slider2.jpg);
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  min-height: 512px;
-  opacity: 1;
-  transform: translate3d(0px, 0px, 0px);
-  transition-duration: 0ms;
-}
-
-.slider-three {
-  background-image: url(../images/slider3.jpg);
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  min-height: 512px;
-  opacity: 1;
-  transform: translate3d(0px, 0px, 0px);
-  transition-duration: 0ms;
+.main-slider_item::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(41, 41, 58, 0.4);
 }
 
 .section-slider_text-block {
+  position: relative;
+  z-index: 3;
   padding: 180px 0px;
-  color: #95ffe0;
+  color: white;
 }
 
 .section-slider_text-block--title {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 34px;
-  line-height: 1.375;
-  letter-spacing: 0.06em;
+  line-height: 46px;
+  letter-spacing: 2px;
   font-family: "Oswald", Helvetica, Arial, sans-serif;
-  font-weight: 400;
+  font-weight: 600;
   text-transform: uppercase;
 }
 
 .section-slider_text-block--text {
-  margin: 20px 0px 30px 0px;
+  margin: 30px 0px 50px 0px;
   font-weight: 300;
   line-height: 1.41667;
   font-family: "Lato", Helvetica, Arial, sans-serif;
@@ -708,14 +699,28 @@ ul {
 
 /* SWIPER SLIDER */
 
+.swiper-pagination {
+    text-align: left;
+}
+
+.swiper-container-horizontal>.swiper-pagination-bullets {
+    bottom: 50px;
+    left: 200px;
+}
+
 .swiper-pagination-bullet {
   display: inline-block;
-  width: 14px;
-  height: 14px;
+  width: 18px;
+  height: 18px;
   border-radius: 100%;
+  border: 1px solid white;
   background: rgba(255, 255, 255, 0.3);
   box-shadow: 0 0 0 0 rgb(0 0 0 / 50%);
   transition: 0.33s;
+}
+
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 15px;
 }
 
 .swiper-pagination-bullet-active {
@@ -843,7 +848,7 @@ ul {
 /* example */
 
 .example {
-    box-shadow: 2px 0 12px 0 rgb(75 78 109 / 33%);
+    box-shadow: 2px 0 10px 0 rgb(75 78 109 / 33%);
 }
 
 .example .section-services_card {
