--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ ul {
     display: inline-block;
     max-width: 100%;
     padding: 11px 35px;
-    min-width: 116px;
+    min-width: 190px;
     font-size: 14px;
     line-height: 24px;
     font-family: "Oswald", Helvetica, Arial, sans-serif;
@@ -473,6 +473,90 @@ ul {
     color: white;
 }
 
+/* FOOTER*/
+
+.footer {
+    background-color: #29293a;
+    color: #b3bec5;
+    padding-top: 100px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.footer_text {
+    padding: 30px 30px 30px 0px;
+}
+
+footer i, .fa-angle-double-right {
+    color: #287ff9;
+    font-size: 18px;
+    font-weight: 900;
+    padding-right: 10px;
+}
+
+.footer_contact-link {
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.footer_subtitle {
+    position: relative;
+    color: #287ff9;
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 22px;
+    margin-bottom: 20px;
+}
+
+.footer_subtitle::after {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 0;
+    width: 43px;
+    height: 2px;
+    display: inline-block;
+    background-color: #b3bec5;
+}
+
+.footer-links li {
+    padding-top: 10px;
+    transition: all 0.2s;
+}
+
+.footer-links li a:hover {
+    color: white;
+    padding-left: 10px;
+}
+
+.footer_btn {
+    margin-top: 20px;
+    width: 100%;
+}
+
+.footer_social-list {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+    padding: 0 20px;
+}
+
+.footer_social-list i {
+    color: #b3bec5;
+}
+
+.footer_item {
+    padding-left: 30px;
+    margin-bottom: 50px;
+}
+
+.copyright {
+    margin: 0px 25px 0px;
+    padding: 25px 0px;
+    border-top: 2px solid #36383af6;
+}
+
 /* ANIMATION */
 
 @keyframes fadeIn {
@@ -863,7 +947,6 @@ ul {
         right: 20px;
         top: 30px;
     }
-}
 
 /* ------------screen max-width 768 ---------*/
 
