--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    overflow-y: hidden;
+    overflow-x: hidden;
     font-family: "Lato", Helvetica, Arial, sans-serif;
     font-weight: 300;
     font-size: 18px;
