--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,7 @@ footer i, .fa-angle-double-right {
 
 @media (min-width: 1600px) {
     .container {
-        max-width: 1500px;
+        max-width: 90%;
     }
 }
 
@@ -670,6 +670,24 @@ footer i, .fa-angle-double-right {
     .mobile-btn {
         display: none;
     }
+}
+
+/* ----------screen - max-width 1400 --------*/
+@media screen and (max-width: 1400px) {
+   .page-header_wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+   .navbar_center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    order: 3;
+    margin: 0 auto;
+    width: 100%;
+}
 }
 
 /* ----------screen - max-width 992 --------*/
