--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Oswald:wght@300;400;500;600;700&display=swap');
+
 /* BASE */
 
 html {
@@ -12,7 +14,7 @@ html {
 }
 
 body {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 18px;
   line-height: 1.6;
